--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         /* Cabeçalho */
         header {
-            background-color: #4285f4;
+            background-color: #08101d;
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -129,7 +129,10 @@
     <footer>
         <p>© 2025 EX-curricular App. Todos os direitos reservados.</p>
     </footer>
-
+    <footer>
+        <p>© 2025 EX-curricular App. Todos os direitos reservados.</p>
+    </footer>
+ 
+    
 </body>
-
 </html>
