--- a/index.html
+++ b/index.html
@@ -1,138 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EX-curricular</title>
-    <style>
-        /* Estilos gerais */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f1f3f4;
-        }
-
-        /* Cabeçalho */
-        header {
-            background-color: #08101d;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-        }
-
-        /* Layout de página */
-        .container {
-            display: flex;
-            min-height: 100vh;
-        }
-
-        /* Barra lateral */
-        .sidebar {
-            width: 250px;
-            background-color: #ffffff;
-            padding: 20px;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .sidebar a {
-            display: block;
-            padding: 10px 0;
-            color: #333;
-            text-decoration: none;
-            font-weight: bold;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .sidebar a:hover {
-            background-color: #f1f1f1;
-        }
-
-        /* Área de conteúdo principal */
-        .content {
-            flex-grow: 1;
-            padding: 20px;
-        }
-
-        .content h2 {
-            margin-top: 0;
-        }
-
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-
-        .card h3 {
-            margin-top: 0;
-        }
-
-        .card p {
-            color: #555;
-        }
-
-        /* Rodapé */
-        footer {
-            background-color: #4285f4;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>EX-Curricular</title>
 </head>
-
 <body>
-
-    <header>
-        <h1>Atividades Extracurricular</h1>
-    </header>
-
-    <div class="container">
-        <!-- Barra lateral -->
-        <div class="sidebar">
-            <a href="#">Início</a>
-            <a href="#">Turmas</a>
-            <a href="#">Trabalhos</a>
-            <a href="#">Calendário</a>
-            <a href="#">Configurações</a>
-        </div>
-
-        <!-- Conteúdo principal -->
-        <div class="content">
-            <h2>Bem-vindo as atividades</h2>
-            <div class="card">
-                <h3>Últimas atividades</h3>
-                <p>Veja os trabalhos mais recentes que você deve entregar.</p>
-            </div>
-            <div class="card">
-                <h3>Notícias da Turma</h3>
-                <p>Aqui você verá os avisos e notícias importantes.</p>
-            </div>
-            <div class="card">
-                <h3>Próximos Eventos</h3>
-                <p>Confira os eventos importantes para a sua turma.</p>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <p>© 2025 EX-curricular App. Todos os direitos reservados.</p>
-    </footer>
-    <footer>
-        <p>© 2025 EX-curricular App. Todos os direitos reservados.</p>
-    </footer>
- 
-    
+    <nav >
+        <ul class="menu">
+            <li><a href="#">Início</a>
+                <ul>
+                    <li><a href="#">Compras</a></li>
+                    <li><a href="#">Vendas</a></li>
+                    <li><a href="#">Trocas</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Perfil</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="login.html">Conta</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
