--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
 <body>
     <nav >
         <ul class="menu">
-            <li><a href="#">Início</a>
-                <ul>
-                    <li><a href="#">Compras</a></li>
-                    <li><a href="#">Vendas</a></li>
-                    <li><a href="#">Trocas</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Perfil</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="./inicio.html">Início</a>
+            <li><a href="./Sobre.html">Sobre</a></li>
+            <li><a href="./Perfil.html">Perfil</a></li>
             <li><a href="login.html">Conta</a></li>
         </ul>
     </nav>
