--- a/inicio.html
+++ b/inicio.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="./index.html">
+    <li><a href="./index.html"> ⬅Voltar</a></li>
+      <link rel="stylesheet" href="style.css">
 </body>
 </html>
