--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <nav >
         <ul class="menu">
-            <li><a href="./inicio.html">Início</a>
-            <li><a href="./Sobre.html">Sobre</a></li>
-            <li><a href="./Perfil.html">Perfil</a></li>
-            <li><a href="login.html">Conta</a></li>
+            <li><a href="./inicio.html">🏘Início</a>
+            <li><a href="./Sobre.html">👨‍🏫Turmas</a></li>
+            <li><a href="./Perfil.html">👤Perfil</a></li>
         </ul>
     </nav>
 </body>
+<div class="container">
 </html>
