--- a/Sobre.html
+++ b/Sobre.html
@@ -10,5 +10,14 @@
     <link rel="stylesheet" href="./index.html">
     <li><a href="./index.html"> ⬅Voltar</a></li>
     <link rel="stylesheet" href="style.css">
+    <div class="container">
+        <div id="card1">🎶Música</div>
+        <div id="card2">🏅Esportes</div>
+        <div id="card3">🎭Teatro</div>
+        <div id="card4">🕺Dança</div>
+        <div id="card5">🤖Robótica</div>
+        <div id="card6">🎨Artes</div>
+      </div>
+
 </body>
 </html>
