--- a/Perfil.html
+++ b/Perfil.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfil</title>
 </head>
+
 <body>
-    <link rel="stylesheet" href="./index.html">
-    <li><a href="./index.html"> ⬅Voltar</a></li>
-    <link rel="stylesheet" href="style.css">
+
+    <li><a href="./index.html">⬅ Voltar</a></li>
+
+    <h1>Perfil do Usuário</h1>
+
+    <!-- Foto principal do perfil -->
+    <div>
+        <img src="https://i.imgur.com/7yUvePI.jpeg" 
+             alt="Foto de Perfil" 
+             width="180" 
+             height="180">
+    </div>
+
+    <h2>Nome do Usuário</h2>
+    <p>Membro desde Janeiro 2024</p>
+
+    <hr>
+
+    <h3>Informações</h3>
+
+    <p><strong>Email:</strong> usuario@example.com</p>
+    <p><strong>Cidade:</strong> São Paulo, Brasil</p>
+    <p><strong>Telefone:</strong> (11) 99999-9999</p>
+
+    <hr>
+
+    <h3>Galeria de Fotos</h3>
+
+    <div>
+        <img src="https://i.imgur.com/Vz81GEl.jpeg" alt="Foto 1" width="150">
+        <img src="https://i.imgur.com/Bv9fl0A.jpeg" alt="Foto 2" width="150">
+        <img src="https://i.imgur.com/M48zXIx.jpeg" alt="Foto 3" width="150">
+    </div>
+
+    <hr>
+
+    <h3>Sobre Mim</h3>
+    <p>Olá! Meu nome é Nome do Usuário e gosto de tecnologia, música e viagens.  
+       Este é meu perfil simples feito em HTML!</p>
+
 </body>
 </html>
+
