--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li><a href="./Perfil.html">👤Perfil</a></li>
         </ul>
     </nav>
+        <div class="container">
+        <img src="./images.png" alt="" />
+      </div>
 </body>
 <div class="container"><div class="titulo">
     </div>
