--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav >
         <ul class="menu">
-            <li><a href="./inicio.html">🏘Início</a>
+            <li><a href="./inicio.html">🗓️Calendário</a>
             <li><a href="./Sobre.html">👨‍🏫Turmas</a></li>
             <li><a href="./Perfil.html">👤Perfil</a></li>
         </ul>
