--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🏘inicio</title>
+    <title>🗓️Calendário</title>
 </head>
 <body>
     <link rel="stylesheet" href="./index.html">
