--- a/Perfil.html
+++ b/Perfil.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <li><a href="./index.html">⬅ Voltar</a></li>
-
     <h1>Perfil do Usuário</h1>
 
-    <!-- Foto principal do perfil -->
     <div>
-        <img src="https://i.imgur.com/7yUvePI.jpeg" 
+        <img src="./12225881.png" 
              alt="Foto de Perfil" 
              width="180" 
              height="180">
@@ -31,7 +30,6 @@
     <p><strong>Cidade:</strong> São Paulo, Brasil</p>
     <p><strong>Telefone:</strong> (11) 99999-9999</p>
 
-    <hr>
 
     <h3>Galeria de Fotos</h3>
 
@@ -46,7 +44,8 @@
     <h3>Sobre Mim</h3>
     <p>Olá! Meu nome é Nome do Usuário e gosto de tecnologia, música e viagens.  
        Este é meu perfil simples feito em HTML!</p>
-
 </body>
 </html>
+
+
 
